app/assets/stylesheets/home_stylesheet.css
a:link {
  text-decoration: none;
}

a:visited {
  text-decoration: none;
}

/*nav.top-bar {
  text-align: center;
}*/

/*section.top-bar-section {
  display: inline-block;
}
*/
/*_______________MAIN_NAV_______________*/

.TC-logo {
  margin-left: 40px;
}

.Nav_Div {
  height: 122px;
}

.navbar-right-margin {
  margin-right: 40px;
}

/*.container {
  padding: auto;
  }*/

.Menu_Items {
  display: inline;
}

.nav-middle {
  /*display: block;*/
  /*margin: 0 auto;*/
  vertical-align: middle;
}

.menu-items-link-style:link {
  opacity: 0.69;
  font-family: Aleo-Regular;
  font-size: 16px;
  color: #F5F5EB;
  letter-spacing: 1px;
  line-height: 19px;
  text-decoration: none;
}

.menu-items-link-style:visited {
  opacity: 0.69;
  font-family: Aleo-Regular;
  font-size: 16px;
  color: #F5F5EB;
  letter-spacing: 1px;
  line-height: 19px;
  text-decoration: none;
}

.menu-items-block {
  display: block;
  list-style-type: none;
}

.Active_Menu_Item {
  font-family: Aleo-Bold;
  font-size: 16px;
  color: #F5F5EB;
  letter-spacing: 1px;
  line-height: 19px;
}

.Line_Decoration {
  border: 2px solid #FF5D3B;
}

/*.Button {
border: 3px solid #FF5D3B;
border-radius: 40px; }

.Button_text {
font-family: HelveticaNeue;
font-size: 16px;
color: #FF5D3B;
line-height: 18px; }*/

/*.Inquery-link-inline {
  display: inline;
}*/

.Login-link {
  display: inline;
  text-decoration: none;
  font-family: HelveticaNeue-Medium;
  font-size: 16px;
  color: #FFFFFF;
  line-height: 19px;
}

.Login-link:link {
  font-family: HelveticaNeue-Medium;
  font-size: 16px;
  color: #FFFFFF;
  line-height: 19px;
  text-decoration: none;
}

.Login-link:visited {
  font-family: HelveticaNeue-Medium;
  font-size: 16px;
  color: #FFFFFF;
  line-height: 19px;
  text-decoration: none;
}

.Login-link-inline {
  display: inline;
}

./*TC_Logo {
  height: 66px;
  display: inline;
  padding-top: 29px;
}*/

.TC-Logo-Inline {
  display: inline;
}

.navbar_link_style:link {
  border-radius: 50px;
  border-style: solid;
  border-width: 2px;
  border-color: #FF5D3B;
  color: #FF5D3B;
  display: inline;
  font-family: HelveticaNeue-Medium;
  font-size: 16px;
  text-decoration: none;
  padding: 12px 18px;
}

.navbar_link_style:visited {
  color: #FF5D3B;
}

.navbar_link_style:hover {
  color: #FFFFFF;
  background-color: #FF5D3B;
  border-color: #FF5D3B;
}


/*_______________SML_NAV_______________*/

.Sml_Nav {
  background: #000000;
  height: 70px;
  width: 100%;
}


/*_______________HERO_______________*/

.Hero {
  background-image: url('/images/Photography/hero.png');
  background-size: 100%;
  /*position: absolute;*/
/*  right: 0;
  left: 0;
  top: 124px;
  bottom: 0;*/
  height: 859px;
  text-align: center;
}

.Hero-Text {
  font-family: Aleo-Bold;
  font-size: 66px;
  color: #FFFFFF;
  letter-spacing: 1px;
  /*line-height: 66px;*/
  padding-top: 304px;
}

.orange-text {
  color: #FF5D3B;
}

.Hero_Sub_Title {
  font-family: HelveticaNeue-Light;
  font-size: 36px;
  color: #FFFFFF;
  line-height: 55px;
  margin-bottom: 100px;
}

.Opacity-Mask {
  background: #FCFCF2;
  background: rgba(59,59,59,0.63);
}

.more-arrow {
  margin: 98px auto;
}



/*_______________SECTION2: ABOUT & LAST SECTION_______________*/

.Section2_About {
  background-image: url('/images/Photography/about.png');
  background-size: 100%;
  height: 600px;
  text-align: center;
  /*position: absolute;*/
}

.Section_Title {
  font-family: Aleo-Bold;
  font-size: 44.16px;
  color: #444B52;
  letter-spacing: 2px;
  line-height: 53px;
  padding-top: 137px;
}

.Section_Body_Text {
  font-family: HelveticaNeue-Light;
  font-size: 26px;
  color: #444B52;
  line-height: 46px;
}

.link_style:link {
  border-radius: 50px;
  border-style: solid;
  border-width: 3px;
  border-color: #FF5D3B;
  color: #FF5D3B;
  display: block;
  font-family: HelveticaNeue-Medium;
  font-size: 20px;
  margin: auto;
  text-decoration: none;
  width: 220px;
  padding: 15px 0;
}

.link_style:visited {
  color: #FF5D3B;
}

.link_style:hover {
  background-color: #FF5D3B;
  border-color: #FF5D3B;
  color: #FFFFFF;
}


/*_______________SUB_SECTIONS_______________*/

.SS_Text_BG {
  background:#E3E4DB;
  border: 6px solid #444B52;
}

.SS_Body_Copy {
  font-family: HelveticaNeue;
  font-size: 18px;
  color: #444B52;
  letter-spacing: 0.33px;
  line-height: 30px;
  margin-left: 20px;
  margin-top: 30px;
}

.SS_Title {
  font-family: Aleo-Bold;
  font-size: 36px;
  color: #444B52;
  letter-spacing: 1px;
  line-height: 44px;
  height: 38px;
  margin-left: 20px;
  margin-top: 45px;
}

.SS_Line_Separator {
  border: 2px solid #FF5D3B;
  border-radius: 10px;
  width: 40px;
  margin-left: 20px;
  margin-top: -15px;
}

.SS_BG {
  height: 560px;
  Width: 100%;
}

/*_______________Savor Section_______________*/

.Savor_Section {
  background-image: url('/images/Photography/savor_the_chefs_best.png');
  background-size: 100%;
}

#Savor_Section_Text {
  float: left;
  height: 296px;
  margin-top: 124px;
  margin-left: 90px;
  margin-bottom: 124px;
  width: 535px;
}

/*_______________Discover Section_______________*/

.Discover_Section {
  background-image: url('/images/Photography/discover_unique_spaces.png');
  background-size: 100%;
}

#Discover_Section_Text {
  float: right;
  height: 296px;
  margin-top: 124px;
  margin-right: 90px;
  margin-bottom: 124px;
  width: 535px;
}

/*_______________Top Restaurants Section_______________*/

.Top_Restaurants_Section {
  background-image: url('/images/Photography/top_restaurants.png');
  background-size: 100%;
  height: 472px;
  text-align: center;
}

.Top_Restaurants_Section_Title {
  font-family: Aleo-Bold;
  font-size: 44.16px;
  color: #444B52;
  letter-spacing: 2px;
  line-height: 53px;
  padding-top: 90px;
}

.view_experiences_link_style:link {
  border-radius: 50px;
  border-style: solid;
  border-width: 3px;
  border-color: #FF5D3B;
  color: #FF5D3B;
  display: block;
  font: HelveticaNeue-Medium;
  font-size: 20px;
  margin: auto;
  text-decoration: none;
  width: 328px;
  padding: 15px 0;
}

.view_experiences_link_style:visited {
  color: #FF5D3B;
}

.view_experiences_link_style:hover {
  background-color: #FF5D3B;
  border-color: #FF5D3B;
  color: #FFFFFF;
}

/*_______________Footer_______________*/

.Footer {
  background: #000000;
  height: 140px;
}

.footer-link-group {
  padding-top: 37px;
  height: 37px;
}

#footer-links {
  /*margin-top: 37px;*/
  margin-right: 105px;
  display: block;
}

.footer-links {
  display: inline;
  list-style-type: none;
  margin-right: 37px;
  /*line: 120%;*/
}

.footer-links-style:link {
  font-family: HelveticaNeue;
  size: 20px;
  color: #F5F5EB;
  text-decoration: none;
}

.footer-links-style:visited {
  font-family: HelveticaNeue;
  size: 20px;
  color: #F5F5EB;
  text-decoration: none;
}
/*
#footer-social-media-links {
display: block;
margin-right: 105px;
}*/

.footer-social-media-links {
  text-decoration: none;
  /*display: inline;*/
  list-style-type: none;
  margin-left: 37px;
  float: right;
  background-color: #F5F5EB;
  background-repeat: no-repeat;
  border-radius: 50%;
  width: 37px;
  height: 37px;
}

.social-media-link-circle {

}

#copyright {
  font-family: HelveticaNeue;
  font-size: 16px;
  color: #F5F5EB;
  /*line: 119%;*/
  opacity: 0.65;
  text-align: center;
}

